Add gameboy button

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -226,6 +226,9 @@
                 <a class="link-icon" href="https://32bit.cafe/">
                     <img src="/images/32b-pcb.png" alt="32b cafe" height="31" width="88">
                 </a>
+                <a class="link-icon" href="https://zakhary.dev/blog/gbc-web-button">
+                    <img src="/images/gameboy-button.gif" alt="game boy" height="31" width="88">
+                </a>
                 <div class="link-icon">
                     <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                         <rect class="icon-rect" height="31" width="88" fill="#FC4F1E">
