Add to Elsewhere and remove libre.fm and RA windows

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            <div class="content-window" onload="loadWindow">
+            <!-- <div class="content-window" onload="loadWindow">
                 <div class="title-bar">
                     <div class="title-lines">
                         <div class="lines" aria-hidden="true">
@@ -173,7 +173,7 @@
                     <p><a href="https://retroachievements.org/user/cobbland">More games</a></p>
                     <p class="note">Updated {% date %}</p>
                 </div>
-            </div>
+            </div> -->
 
             <div class="content-window" onload="loadWindow">
             <div class="title-bar">
