Add mahjong page

--- a/_includes/window.html
+++ b/_includes/window.html
@@ -33,7 +33,7 @@ layout: layout.html
             </div>
         </div>
     </div>
-    <main class="{{ class | default: "" }}">
+    <main class="{{ class | default: "" }}" id="main-content-display">
             {{ content }}
     </main>
 </div>
