--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon icon" href="/images/apple-touch-icon.png" sizes="180x180" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/crt.css">
-    <link rel="stylesheet" href="/css/snow.css">
+     <link rel="stylesheet" href="/css/seasons.css">
     <meta name="fediverse:creator" content="@cobb@dice.camp">
     <link rel="webmention" href="https://webmention.io/cobb.land/webmention">
     <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc">
@@ -308,6 +308,6 @@
         <p class="p-note">A writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
 
-    <div id="winterContainer" class="winterContainer" aria-hidden="true"></div>
+    <div id="seasonContainer" class="seasonContainer" aria-hidden="true"></div>
 
 </body></html>
